# desafio-CineReserve-API

./: .gitignore  README.md  docker-compose.yml  dockerfile  entrypoint.sh
.github/workflows/: criar_release.yml  pylint.yml  testar.yml
app/: movies.json  pyproject.toml  requirements.txt
app/src/: wsgi.py
app/src/app/: app_singleton.py  error_handler.py  main.py  migrate.py  seeds.py  server.py
app/src/app/config/: base.py  dev.py  docker.py  test.py
app/src/app/converters/: __init__.py  enum_converter.py  json_converter.py
app/src/app/exceptions/: __init__.py  login_invalido_exception.py  parametro_obrigatorio_exception.py  sql_injection_exception.py  tipo_invalido.py
app/src/app/models/: __init__.py  abstract_model.py  dto_input.py  filme.py  ingresso.py  paginacao.py  sessao.py  usuario.py
app/src/app/models/enums/: __init__.py  abstract_enum.py  genero_enum.py  status_assento_enum.py
app/src/app/models/filters/: __init__.py  abstract_filter.py  dto_filter.py  filme_filter.py  ingresso_filter.py  paginacao_filter.py  sessao_filter.py
app/src/app/repositories/: __init__.py  abstract_repository.py  filme_repository.py  ingresso_repository.py  sessao_repository.py  usuario_repository.py
app/src/app/resources/: __init__.py  abstract_resource.py  api_resource.py  assento_resource.py  auth.py  filme_resource.py  ingresso_resource.py  sessao_resource.py  usuario_resource.py
app/src/app/utils/: seguranca_utils.py  validador_utils.py
app/tests/: test_filters.py  test_foo.py  test_models.py
docs/: README.md
docs/api/: README.md  postman.json  (+1 more)
(+2 files in other folders)
